2. collect(Collectors.toList()) -> toList() 변경 & 적절한 에러 변경